# fingerd

./: .gitignore  Makefile  README.md  fingerd.cabal  stack.yaml
src/: Debug.hs  Main.hs
