name:                fingerd
version:             0.1.0.0
synopsis:            A contact sharing service for users on a network
description:         Please see README.md
homepage:            http://github.com/stites/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Stites
maintainer:          sam@stites.io
copyright:           Copyright: (c) 2016-2017 Sam Stites
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     -- , sqlite-simple
                     , text

source-repository head
  type:     git
  location: https://github.com/stites/fingerd

